examples/errors/esem0.c
int main ()
{
	int e1, e2, e3, e4;
	float f1;
	
	e1 = ((e2 * e2) + e3) * e4;
	
	e1 = e1 + f1;
}

